--- a/locales/es.json
+++ b/locales/es.json
@@ -1,6 +1,15 @@
 {
-    "welcome": "Bienvenido",
     "error.not_found": "No encontrado",
     "error.invalid_input": "Entrada inválida",
-    "success.saved": "Guardado exitosamente"
-} 
+    "success.saved": "Guardado exitosamente",
+    "error.permission.no_push_product": "No tienes permiso para enviar productos",
+    "error.product.no_sku": "El producto no tiene un SKU",
+    "error.product.no_name": "El producto no tiene un nombre",
+    "error.product.invalid_price": "El precio del producto es inválido",
+    "error.product.invalid_stock": "El stock del producto es inválido",
+    "error.product.invalid_category": "La categoría del producto es inválida",
+    "error.product.invalid_description": "La descripción del producto es inválida",
+    "error.product.invalid_image": "La imagen del producto es inválida",
+    "error.product.invalid_image_url": "La URL de la imagen del producto es inválida",
+    "error.product.invalid_image_url_format": "La URL de la imagen del producto no tiene un formato válido"
+}
