--- a/locales/pt.json
+++ b/locales/pt.json
@@ -11,5 +11,6 @@
     "error.product.invalid_description": "A descrição do produto é inválida",
     "error.product.invalid_image": "A imagem do produto é inválida",
     "error.product.invalid_image_url": "A URL da imagem do produto é inválida",
-    "error.product.invalid_image_url_format": "A URL da imagem do produto não tem um formato válido"
+    "error.product.invalid_image_url_format": "A URL da imagem do produto não tem um formato válido",
+    "error.not_implemented": "Não implementado"
 }
