--- a/locales/en.json
+++ b/locales/en.json
@@ -1,21 +1,51 @@
 {
-    "error.not_found": "Not found",
+    "error.connector_type": "connector is not of type courier",
+    "error.connector_type.ecommerce": "connector is not of type ecommerce", 
+    "error.connector_type.erp": "connector is not of type erp",
+    "error.decode_payload": "error decoding payload: %v",
+    "error.encode_payload": "error encoding payload: %v",
+    "error.find_by_ref_code": "error finding by reference code: %v",
+    "error.find_connector": "error finding connector: %v",
+    "error.find_order": "error finding order: %v",
+    "error.find_product": "error finding product: %v",
+    "error.get_connector": "Error getting connector: %v",
+    "error.init_connector": "error initializing connector: %v",
+    "error.init_order_connector": "Error initializing order connector: %v",
     "error.invalid_input": "Invalid input",
-    "success.saved": "Successfully saved",
+    "error.no_permissions": "no permissions to perform this action",
+    "error.not_found": "Not found",
+    "error.not_implemented": "Not implemented",
+    "error.order": "%s: %s",
     "error.permission.no_push_product": "No permission to push product",
-    "error.product.no_sku": "Product has no SKU",
-    "error.product.no_name": "Product has no name",
-    "error.product.invalid_price": "Product has invalid price",
-    "error.product.invalid_stock": "Product has invalid stock",
+    "error.product": "%s: %s",
+    "error.product.invalid_attributes": "Product has invalid attributes",
     "error.product.invalid_category": "Product has invalid category",
     "error.product.invalid_description": "Product has invalid description",
     "error.product.invalid_image": "Product has invalid image",
     "error.product.invalid_image_url": "Product has invalid image URL",
     "error.product.invalid_image_url_format": "Product has invalid image URL format",
-    "error.not_implemented": "Not implemented",
     "error.product.invalid_multimedia": "Product has invalid multimedia",
-    "error.product.invalid_attributes": "Product has invalid attributes",
+    "error.product.invalid_price": "Product has invalid price",
+    "error.product.invalid_stock": "Product has invalid stock",
     "error.product.invalid_variations": "Product has invalid variations",
+    "error.product.no_name": "Product has no name",
+    "error.product.no_sku": "Product has no SKU",
+    "error.product.variant_missing_attribute": "Variant missing attribute",
     "error.product.variant_without_attributes": "Variant without attributes",
-    "error.product.variant_missing_attribute": "Variant missing attribute"
-} 
+    "error.pull_order": "Error pulling order: %v",
+    "error.pull_orders": "Error pulling orders: %v",
+    "error.pull_order_shipping": "Error pulling order shipping: %v",
+    "error.pull_product": "Error pulling product: %v",
+    "error.pull_product_categories": "Error pulling product categories: %v",
+    "error.pull_product_category": "Error pulling product category: %v",
+    "error.push_order": "Error pushing order: %v",
+    "error.push_order_cancel": "Error pushing order cancel: %v",
+    "error.push_order_complete": "Error pushing order complete: %v",
+    "error.push_order_shipping": "Error pushing order shipping: %v",
+    "error.push_product": "Error pushing product: %v",
+    "error.push_product_inventory": "Error pushing product inventory: %v",
+    "error.validate_product": "error validating product",
+    "success.operation": "Operation successful",
+    "success.push_order_shipping": "Order shipping pushed successfully",
+    "success.saved": "Successfully saved"
+}
