--- a/locales/es.json
+++ b/locales/es.json
@@ -1,21 +1,51 @@
 {
+    "error.connector_type": "el servicio debe ser tipo courier",
+    "error.connector_type.ecommerce": "el servicio debe ser tipo ecommerce",
+    "error.connector_type.erp": "el servicio debe ser tipo erp",
+    "error.decode_payload": "error al procesar los datos: %v",
+    "error.encode_payload": "error al preparar los datos: %v",
+    "error.find_by_ref_code": "error al buscar por código: %v",
+    "error.find_connector": "error al buscar el servicio: %v",
+    "error.find_order": "error al buscar la orden: %v",
+    "error.find_product": "error al buscar el producto: %v",
+    "error.get_connector": "Error al conectar con el servicio: %v",
+    "error.init_connector": "error al iniciar conexión: %v",
+    "error.init_order_connector": "Error al iniciar conexión de órdenes: %v",
+    "error.invalid_input": "Datos ingresados no válidos",
+    "error.no_permissions": "no tienes permisos para esta acción",
     "error.not_found": "No encontrado",
-    "error.invalid_input": "Entrada inválida",
-    "success.saved": "Guardado exitosamente",
-    "error.permission.no_push_product": "No tienes permiso para enviar productos",
-    "error.product.no_sku": "El producto no tiene un SKU",
-    "error.product.no_name": "El producto no tiene un nombre",
-    "error.product.invalid_price": "El precio del producto es inválido",
-    "error.product.invalid_stock": "El stock del producto es inválido",
-    "error.product.invalid_category": "La categoría del producto es inválida",
-    "error.product.invalid_description": "La descripción del producto es inválida",
-    "error.product.invalid_image": "La imagen del producto es inválida",
-    "error.product.invalid_image_url": "La URL de la imagen del producto es inválida",
-    "error.product.invalid_image_url_format": "La URL de la imagen del producto no tiene un formato válido",
-    "error.not_implemented": "No implementado",
-    "error.product.invalid_multimedia": "El producto tiene multimedia inválida",
-    "error.product.invalid_attributes": "Los atributos del producto son inválidos",
-    "error.product.invalid_variations": "Las variaciones del producto son inválidas",
-    "error.product.variant_without_attributes": "La variación del producto no tiene atributos",
-    "error.product.variant_missing_attribute": "La variación del producto está faltando un atributo"
+    "error.not_implemented": "Función no implementada",
+    "error.order": "%s: %s",
+    "error.permission.no_push_product": "No tienes permiso para subir productos",
+    "error.product": "%s: %s",
+    "error.product.invalid_attributes": "Los atributos no son válidos",
+    "error.product.invalid_category": "La categoría no es válida",
+    "error.product.invalid_description": "La descripción no es válida",
+    "error.product.invalid_image": "La imagen no es válida",
+    "error.product.invalid_image_url": "La URL de la imagen no es válida",
+    "error.product.invalid_image_url_format": "El formato de la URL de la imagen no es válido",
+    "error.product.invalid_multimedia": "Los archivos multimedia no son válidos",
+    "error.product.invalid_price": "El precio no es válido",
+    "error.product.invalid_stock": "La cantidad en stock no es válida",
+    "error.product.invalid_variations": "Las variaciones no son válidas",
+    "error.product.no_name": "Falta el nombre del producto",
+    "error.product.no_sku": "Falta el SKU del producto",
+    "error.product.variant_missing_attribute": "Falta un atributo en la variación",
+    "error.product.variant_without_attributes": "La variación no tiene atributos",
+    "error.pull_order": "Error al obtener la orden: %v",
+    "error.pull_orders": "Error al obtener las órdenes: %v",
+    "error.pull_order_shipping": "Error al obtener información de envío: %v",
+    "error.pull_product": "Error al obtener el producto: %v",
+    "error.pull_product_categories": "Error al obtener categorías: %v",
+    "error.pull_product_category": "Error al obtener la categoría: %v",
+    "error.push_order": "Error al enviar la orden: %v",
+    "error.push_order_cancel": "Error al cancelar la orden: %v",
+    "error.push_order_complete": "Error al marcar orden como completada: %v",
+    "error.push_order_shipping": "Error al enviar información de envío: %v",
+    "error.push_product": "Error al subir el producto: %v",
+    "error.push_product_inventory": "Error al actualizar el inventario: %v",
+    "error.validate_product": "el producto tiene datos no válidos",
+    "success.operation": "Operación completada",
+    "success.push_order_shipping": "Información de envío enviada correctamente",
+    "success.saved": "Se guardó correctamente"
 }
