update locales to languages

--- a/languages/en.json
+++ b/languages/en.json
@@ -1,53 +1,99 @@
 {
-    "error.connector_type": "connector is not of type courier",
-    "error.connector_type.ecommerce": "connector is not of type ecommerce", 
-    "error.connector_type.erp": "connector is not of type erp",
-    "error.decode_payload": "error decoding payload: %v",
-    "error.encode_payload": "error encoding payload: %v",
-    "error.find_by_ref_code": "error finding by reference code: %v",
-    "error.find_connector": "error finding connector: %v",
+    "error.connector_type": "service must be courier type",
+    "error.connector_type.ecommerce": "service must be ecommerce type",
+    "error.connector_type.erp": "service must be erp type",
+    "error.decode_payload": "error processing data: %v",
+    "error.encode_payload": "error preparing data: %v",
+    "error.find_by_ref_code": "error searching by code: %v",
+    "error.find_connector": "error finding service: %v",
     "error.find_order": "error finding order: %v",
     "error.find_product": "error finding product: %v",
-    "error.get_connector": "Error getting connector: %v",
-    "error.init_connector": "error initializing connector: %v",
-    "error.init_order_connector": "Error initializing order connector: %v",
-    "error.invalid_input": "Invalid input",
-    "error.no_permissions": "no permissions to perform this action",
+    "error.get_connector": "Error connecting to service: %v",
+    "error.init_connector": "error initializing connection: %v",
+    "error.init_order_connector": "Error initializing order connection: %v",
+    "error.invalid_input": "Invalid input data",
+    "error.no_permissions": "you don't have permissions for this action",
     "error.not_found": "Not found",
-    "error.not_implemented": "Not implemented",
+    "error.not_implemented": "Function not implemented",
     "error.order": "%s: %s",
-    "error.permission.no_push_product": "No permission to push product",
+    "error.permission.no_push_product": "You don't have permission to upload products",
     "error.product": "%s: %s",
-    "error.product.invalid_attributes": "Product has invalid attributes",
-    "error.product.invalid_category": "Product has invalid category",
-    "error.product.invalid_description": "Product has invalid description",
-    "error.product.invalid_image": "Product has invalid image",
-    "error.product.invalid_image_url": "Product has invalid image URL",
-    "error.product.invalid_image_url_format": "Product has invalid image URL format",
-    "error.product.invalid_multimedia": "Product has invalid multimedia",
-    "error.product.invalid_price": "Product has invalid price",
-    "error.product.invalid_stock": "Product has invalid stock",
-    "error.product.invalid_variations": "Product has invalid variations",
-    "error.product.no_name": "Product has no name",
-    "error.product.no_sku": "Product has no SKU",
-    "error.product.variant_missing_attribute": "Variant missing attribute",
-    "error.product.variant_without_attributes": "Variant without attributes",
-    "error.pull_order": "Error pulling order: %v",
-    "error.pull_orders": "Error pulling orders: %v",
-    "error.pull_order_shipping": "Error pulling order shipping: %v",
-    "error.pull_product": "Error pulling product: %v",
-    "error.pull_product_categories": "Error pulling product categories: %v",
-    "error.pull_product_category": "Error pulling product category: %v",
-    "error.push_order": "Error pushing order: %v",
-    "error.push_order_cancel": "Error pushing order cancel: %v",
-    "error.push_order_complete": "Error pushing order complete: %v",
-    "error.push_order_shipping": "Error pushing order shipping: %v",
-    "error.push_product": "Error pushing product: %v",
-    "error.push_product_inventory": "Error pushing product inventory: %v",
-    "error.validate_product": "error validating product",
-    "success.operation": "Operation successful",
-    "success.push_order_shipping": "Order shipping pushed successfully",
+    "error.product.invalid_attributes": "Invalid attributes",
+    "error.product.invalid_category": "Invalid category",
+    "error.product.invalid_description": "Invalid description",
+    "error.product.invalid_image": "Invalid image",
+    "error.product.invalid_image_url": "Invalid image URL",
+    "error.product.invalid_image_url_format": "Invalid image URL format",
+    "error.product.invalid_multimedia": "Invalid multimedia files",
+    "error.product.invalid_price": "Invalid price",
+    "error.product.invalid_stock": "Invalid stock quantity",
+    "error.product.invalid_variations": "Invalid variations",
+    "error.product.no_name": "Product name is missing",
+    "error.product.no_sku": "Product SKU is missing",
+    "error.product.variant_missing_attribute": "Missing attribute: %v in variation: %v",
+    "error.product.variant_without_attributes": "Variation has no attributes",
+    "error.pull_order": "Error getting order: %v",
+    "error.pull_orders": "Error getting orders: %v",
+    "error.pull_order_shipping": "Error getting shipping information: %v",
+    "error.pull_product": "Error getting product: %v",
+    "error.pull_product_categories": "Error getting categories: %v",
+    "error.pull_product_category": "Error getting category: %v",
+    "error.push_order": "Error sending order: %v",
+    "error.push_order_cancel": "Error canceling order: %v",
+    "error.push_order_complete": "Error marking order as complete: %v",
+    "error.push_order_shipping": "Error sending shipping information: %v",
+    "error.push_product": "Error uploading product: %v",
+    "error.push_product_inventory": "Error updating inventory: %v",
+    "error.validate_product": "product has invalid data",
+    "success.operation": "Operation completed",
+    "success.push_order_shipping": "Shipping information sent successfully",
     "success.saved": "Successfully saved",
-    "error.product.variation_attributes_code_empty": "no attributes assigned to generate variations",
-    "error.product.no_variations": "Product has no variations"
+    "error.product.variation_attributes_code_empty": "no attributes assigned to generate variants",
+    "error.product.no_variations": "Product has no variations",
+    "error.product.emitted_by_indefinite": "undefined issuer",
+    "error.product.attribute_not_found": "%s - attribute not found",
+    "error.product.attribute_value_not_found": "attribute value %s not found for product %s: %v",
+    "error.product.attribute_code_not_exist": "attribute << %s >> does not exist",
+    "error.product.no_attributes_found": "no attributes found for productUID: %s and attributeCode: %s",
+    "error.product.product_has_no_attributes": "product has no attributes",
+    "error.product.attribute_uid_not_found": "attribute with UID %s not found",
+    "error.product.error_searching_attribute_value": "error searching attribute value: %v",
+    "error.product.failed_to_connect_db": "failed to connect to database: %v",
+    "error.product.failed_to_aggregate": "failed to aggregate data: %v",
+    "error.product.failed_to_decode_results": "failed to decode cursor results: %v",
+    "error.product.failed_to_search_attribute_values": "failed to search attribute values: %v",
+    "error.product.attribute_code_missing": "attribute does not contain code",
+    "error.product.value_is_empty": "value is empty",
+    "error.product.value_empty_or_not_exist": "value is empty or does not exist",
+    "error.product.invalid_uid": "Invalid product UID",
+    "error.product.invalid_sku": "Invalid product SKU",
+    "error.product.invalid_upc": "Invalid product UPC",
+    "error.product.invalid_store": "Invalid store",
+    "error.product.store_not_found": "Store not found",
+    "error.product.duplicate_store": "Store is already associated with the product",
+    "error.product.parent_not_found": "Parent product not found",
+    "error.product.duplicate_parent": "Parent product is already associated",
+    "error.product.media_not_found": "Media not found",
+    "error.product.invalid_media_uid": "Invalid media UID",
+    "error.product.invalid_parent_sku": "Invalid parent SKU",
+    "error.product.invalid_variation_attribute": "Invalid variation attribute",
+    "error.product.invalid_variation_value": "Invalid variation value",
+    "error.product.invalid_type": "Invalid product type",
+    "error.product.invalid_status": "Invalid product status",
+    "error.product.invalid_tags": "Invalid product tags",
+    "error.product.invalid_created_at": "Invalid creation date",
+    "error.product.invalid_updated_at": "Invalid update date",
+    "error.product.invalid_created_by": "Invalid product creator",
+    "error.product.invalid_updated_by": "Invalid product updater",
+    "error.product.invalid_strategy": "Invalid product strategy",
+    "error.product.invalid_reference_code": "Invalid reference code",
+    "error.product.invalid_position": "Invalid position",
+    "error.product.invalid_stores": "Invalid stores",
+    "error.product.invalid_parents": "Invalid parent products",
+    "error.product.invalid_variation": "Invalid variation",
+    "error.product.invalid_tmp": "Invalid temporary data",
+    "error.product.invalid_connector": "Invalid connector",
+    "error.product.invalid_request": "Invalid request",
+    "error.product.invalid_user": "Invalid user",
+    "error.product.variant_attribute_empty": "attribute %s is empty in variation %s"
 }
