--- a/languages/es.json
+++ b/languages/es.json
@@ -49,5 +49,51 @@
     "success.push_order_shipping": "Información de envío enviada correctamente",
     "success.saved": "Se guardó correctamente",
     "error.product.variation_attributes_code_empty": "no hay atributos asignados para generar las variantes",
-    "error.product.no_variations": "El producto no tiene variaciones"
+    "error.product.no_variations": "El producto no tiene variaciones",
+    "error.product.emitted_by_indefinite": "emisor indefinido",
+    "error.product.attribute_not_found": "%s - atributo no encontrado",
+    "error.product.attribute_value_not_found": "valor de atributo %s no encontrado para producto %s: %v",
+    "error.product.attribute_code_not_exist": "el atributo << %s >> no existe",
+    "error.product.no_attributes_found": "no se encontraron atributos para productUID: %s y attributeCode: %s",
+    "error.product.product_has_no_attributes": "producto no tiene atributos",
+    "error.product.attribute_uid_not_found": "atributo con UID %s no encontrado",
+    "error.product.error_searching_attribute_value": "error buscando valor del atributo: %v",
+    "error.product.failed_to_connect_db": "fallo al conectar a la base de datos: %v",
+    "error.product.failed_to_aggregate": "fallo al agregar datos: %v",
+    "error.product.failed_to_decode_results": "fallo al decodificar resultados del cursor: %v",
+    "error.product.failed_to_search_attribute_values": "fallo al buscar valores de atributos: %v",
+    "error.product.attribute_code_missing": "el atributo no contiene código",
+    "error.product.value_is_empty": "el valor está vacío",
+    "error.product.value_empty_or_not_exist": "el valor está vacío o no existe",
+    "error.product.invalid_uid": "UID del producto no válido",
+    "error.product.invalid_sku": "SKU del producto no válido",
+    "error.product.invalid_upc": "UPC del producto no válido",
+    "error.product.invalid_store": "Tienda no válida",
+    "error.product.store_not_found": "Tienda no encontrada",
+    "error.product.duplicate_store": "La tienda ya está asociada al producto",
+    "error.product.parent_not_found": "Producto padre no encontrado",
+    "error.product.duplicate_parent": "El producto padre ya está asociado",
+    "error.product.media_not_found": "Multimedia no encontrado",
+    "error.product.invalid_media_uid": "UID de multimedia no válido",
+    "error.product.invalid_parent_sku": "SKU del producto padre no válido",
+    "error.product.invalid_variation_attribute": "Atributo de variación no válido",
+    "error.product.invalid_variation_value": "Valor de variación no válido",
+    "error.product.invalid_type": "Tipo de producto no válido",
+    "error.product.invalid_status": "Estado del producto no válido",
+    "error.product.invalid_tags": "Etiquetas del producto no válidas",
+    "error.product.invalid_created_at": "Fecha de creación no válida",
+    "error.product.invalid_updated_at": "Fecha de actualización no válida",
+    "error.product.invalid_created_by": "Creador del producto no válido",
+    "error.product.invalid_updated_by": "Actualizador del producto no válido",
+    "error.product.invalid_strategy": "Estrategia del producto no válida",
+    "error.product.invalid_reference_code": "Código de referencia no válido",
+    "error.product.invalid_position": "Posición no válida",
+    "error.product.invalid_stores": "Tiendas no válidas",
+    "error.product.invalid_parents": "Productos padre no válidos",
+    "error.product.invalid_variation": "Variación no válida",
+    "error.product.invalid_tmp": "Datos temporales no válidos",
+    "error.product.invalid_connector": "Conector no válido",
+    "error.product.invalid_request": "Solicitud no válida",
+    "error.product.invalid_user": "Usuario no válido",
+    "error.product.variant_attribute_empty": "el atributo %s está vacío en la variación %s"
 }
