--- a/languages/en.json
+++ b/languages/en.json
@@ -95,5 +95,25 @@
     "error.product.invalid_connector": "Invalid connector",
     "error.product.invalid_request": "Invalid request",
     "error.product.invalid_user": "Invalid user",
-    "error.product.variant_attribute_empty": "attribute %s is empty in variation %s"
+    "error.product.variant_attribute_empty": "attribute %s is empty in variation %s",
+    "operator.equal_to": "equal to",
+    "operator.not_equal_to": "not equal to",
+    "operator.greater_than": "greater than",
+    "operator.greater_than_or_equal_to": "greater than or equal to",
+    "operator.less_than": "less than",
+    "operator.lte": "less than or equal to",
+    "operator.in_set": "in set",
+    "operator.not_in_set": "not in set",
+    "operator.like_search": "like search",
+    "operator.regex": "regular expression",
+    "operator.wildcard_search": "wildcard search",
+    "operator.exact_phrase_search": "exact phrase search",
+    "operator.fuzzy_search": "fuzzy search",
+    "operator.full_text_search": "full text search",
+    "operator.atlas_search": "atlas search",
+    "operator.range_values": "range values",
+    "operator.field_exists": "field exists",
+    "operator.field_not_exists": "field not exists",
+    "operator.field_is_null": "field is null",
+    "operator.field_is_not_null": "field is not null"
 }
