--- a/languages/es.json
+++ b/languages/es.json
@@ -95,5 +95,25 @@
     "error.product.invalid_connector": "Conector no válido",
     "error.product.invalid_request": "Solicitud no válida",
     "error.product.invalid_user": "Usuario no válido",
-    "error.product.variant_attribute_empty": "el atributo %s está vacío en la variación %s"
+    "error.product.variant_attribute_empty": "el atributo %s está vacío en la variación %s",
+    "operator.equal_to": "igual a",
+    "operator.not_equal_to": "distinto de",
+    "operator.greater_than": "mayor que",
+    "operator.greater_than_or_equal_to": "mayor o igual que",
+    "operator.less_than": "menor que",
+    "operator.lte": "menor o igual que",
+    "operator.in_set": "en el conjunto",
+    "operator.not_in_set": "no está en el conjunto",
+    "operator.like_search": "búsqueda similar",
+    "operator.regex": "expresión regular",
+    "operator.wildcard_search": "búsqueda con comodines",
+    "operator.exact_phrase_search": "búsqueda de frase exacta",
+    "operator.fuzzy_search": "búsqueda difusa",
+    "operator.full_text_search": "búsqueda de texto completo",
+    "operator.atlas_search": "búsqueda atlas",
+    "operator.range_values": "valores en rango",
+    "operator.field_exists": "el campo existe",
+    "operator.field_not_exists": "el campo no existe",
+    "operator.field_is_null": "el campo es nulo",
+    "operator.field_is_not_null": "el campo no es nulo"
 }
