--- a/languages/pt.json
+++ b/languages/pt.json
@@ -17,5 +17,25 @@
     "error.product.invalid_attributes": "Los atributos del producto son inválidos",
     "error.product.invalid_variations": "Las variaciones del producto son inválidas",
     "error.product.variant_without_attributes": "La variación del producto no tiene atributos",
-    "error.product.variant_missing_attribute": "La variación del producto está faltando un atributo"
+    "error.product.variant_missing_attribute": "La variación del producto está faltando un atributo",
+    "operator.equal_to": "igual a",
+    "operator.not_equal_to": "diferente de",
+    "operator.greater_than": "maior que",
+    "operator.greater_than_or_equal_to": "maior ou igual a",
+    "operator.less_than": "menor que",
+    "operator.lte": "menor ou igual a",
+    "operator.in_set": "no conjunto",
+    "operator.not_in_set": "fora do conjunto",
+    "operator.like_search": "pesquisa semelhante",
+    "operator.regex": "expressão regular",
+    "operator.wildcard_search": "pesquisa coringa",
+    "operator.exact_phrase_search": "pesquisa de frase exata",
+    "operator.fuzzy_search": "pesquisa aproximada",
+    "operator.full_text_search": "pesquisa em texto completo",
+    "operator.atlas_search": "pesquisa atlas",
+    "operator.range_values": "valores no intervalo",
+    "operator.field_exists": "campo existe",
+    "operator.field_not_exists": "campo não existe",
+    "operator.field_is_null": "campo é nulo",
+    "operator.field_is_not_null": "campo não é nulo"
 }
